board 개별 조회 시 : 게시글에 등록된 댓글을 게시글과 함께 반환